# Tanuki

./: README.md
tanuki-pkg/: .gitignore  pyproject.toml
tanuki-pkg/python/cli/: commands.py  output.py
tanuki-pkg/python/core/: database.py  dependency.py  dpkg_shim.py  host_detect.py  package.py  repository.py
tanuki-pkg/python/lua_bridge/: bridge.py  parse_config.lua
tanuki-pkg/scripts/: generate_lib_map.py  tanuki-pkg-count
tanuki-pkg/tanuki/: help.sh
tanuki-pkg/tanuki/bash/: tanuki.sh
tanuki-pkg/tanuki/python/: main.py
tanuki-pkg/tanuki_pkg/: __main__.py
