[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tanuki-pkg"
version = "0.2.0"
description = "Cross-distro .deb package manager"
readme = "../README.md"
license = {text = "GPL-3.0-only"}
authors = [{name = "av3-e"}]
requires-python = ">=3.12"
keywords = ["package-manager", "debian", "linux"]

[project.scripts]
tanuki = "tanuki_pkg.__main__:entry_point"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
]
